# learn2code

./: .gitignore
javascript/meta_pwj/: functional_programming.js
python/: pyproject.toml
python/ibm_gen_ai/: qa_bot.py
python/ibm_gen_ai/ai_python_flask/: mymodule.py  test_mymodule.py
python/ibm_gen_ai/ai_python_flask/lab/: server.py
python/ibm_gen_ai/pythonDataScience/: dict.ipynb  textLab.py
python/pythonDataScience/: text.md
react/first-app/: package-lock.json
react/first-app/src/: App.js
ruby/: crypto.rb
ruby/avdi-flawless/: andor.rb  arrayLiterals.rb  breakwithvalue.rb  file.txt  inf.rb  loops.rb  multilineStrings.rb  redo.rb
ruby/avdi-scintillating/: ensure.rb  exclusiveor.rb  nakedsplat.rb
rust/cli-utils/src/: colors.rs  lib.rs
rust/lib/src/: lib.rs
rust/workspace/: .gitignore  Cargo.toml
rust/workspace/code/dataEngineering/: hashMap_frequency.rs
rust/workspace/code/rustProgramming/: applied_enum.rs  enum_vect.rs  match_moar.rs  option.rs  stdin.rs  vecValue.rs
rust/workspace/dataEngineering/: vec_shuffle.rs  vector_fruitsalad.rs
rust/workspace/dataEngineering/cli-salad/: Cargo.toml
rust/workspace/dataEngineering/cli-salad/src/: main.rs
rust/workspace/dataEngineering/count-freq/: Cargo.toml
rust/workspace/dataEngineering/count-freq/src/: main.rs
rust/workspace/dataEngineering/linked-list-fs/: Cargo.toml
rust/workspace/dataEngineering/weighted-lang/: Cargo.toml
rust/workspace/rustProgramming/: constuctor.rs  enum.rs  enum_type.rs  format_size.rs  hashmap.rs  struct.rs
rust/workspace/src/: main.rs
(+5 files in other folders)
