[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ST4RGUARD", email = "thema11ock@gmail.com" }
]
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "matplotlib>=3.10.3",
    "jupyter>=1.1.1",
    "ipython>=9.4.0",
    "lxml>=6.0.0",
    "debugpy>=1.8.15",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]
